objects/Meals_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_1_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the amount for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 1 Amount</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_1_Applies_To__c</fullName>
        <label>Additional Reimbursement 1 Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_1_Description__c</fullName>
        <description>This is the description for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the description for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_2_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the amount for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 2 Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_2_Applies_To__c</fullName>
        <label>Additional Reimbursement 2 Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_2_Description__c</fullName>
        <description>This is the description for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the description for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_3_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the amount for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 3 Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_3_Applies_To__c</fullName>
        <label>Additional Reimbursement 3 Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Reimbursement_3_Description__c</fullName>
        <description>This is the description for an additional reimbursement applied at the state level.</description>
        <inlineHelpText>This is the description for an additional reimbursement applied at the state level.</inlineHelpText>
        <label>Additional Reimbursement 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Free_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fed Free Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Free_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for free lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for free lunches that are served.</inlineHelpText>
        <label>Fed Free Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Full_Price_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fed Full-Price Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Full_Price_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for full-priced lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for full-priced lunches that are served.</inlineHelpText>
        <label>Fed Full-Price Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Reduced_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fed Reduced Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Reduced_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for reduced lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for reduced lunches that are served.</inlineHelpText>
        <label>Fed Reduced Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Reduced_Threshold__c</fullName>
        <description>This is the threshold percentage for students that are eligible for free or reduced meals.  If the actual percentage is above this threshold all students get free breakfast.</description>
        <inlineHelpText>This is the threshold percentage for students that are eligible for free or reduced meals.  If the actual percentage is above this threshold all students get free breakfast.</inlineHelpText>
        <label>Free/Reduced Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Full_Price_Breakfast_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount a student pays for a full-priced breakfast.</description>
        <inlineHelpText>This is the amount a student pays for a full-priced breakfast.</inlineHelpText>
        <label>Full-Price Breakfast Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Price_Lunch_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount a student pays for a full-priced lunch.</description>
        <inlineHelpText>This is the amount a student pays for a full-priced lunch.</inlineHelpText>
        <label>Full-Price Lunch Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reduced_Breakfast_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount a student pays for a reduced breakfast.</description>
        <inlineHelpText>This is the amount a student pays for a reduced breakfast.</inlineHelpText>
        <label>Reduced Breakfast Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reduced_Lunch_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount a student pays for a reduced lunch.</description>
        <inlineHelpText>This is the amount a student pays for a reduced lunch.</inlineHelpText>
        <label>Reduced Lunch Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meals</relationshipLabel>
        <relationshipName>Meals_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schoolwide_Free_Breakfast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked if breakfast is free for all students.</description>
        <inlineHelpText>This should be checked if breakfast is free for all students.</inlineHelpText>
        <label>Schoolwide Free Breakfast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Meals Setup</relationshipLabel>
        <relationshipName>Meals_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Free_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>State Free Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Free_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for free lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for free lunches that are served.</inlineHelpText>
        <label>State Free Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Full_Price_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>State Full-Price Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Full_Price_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for full-priced lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for full-priced lunches that are served.</inlineHelpText>
        <label>State Full-Price Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Reduced_Breakfast_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>State Reduced Breakfast Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Reduced_Lunch_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the amount of money that the school is reimbursed for reduced lunches that are served.</description>
        <inlineHelpText>This is the amount of money that the school is reimbursed for reduced lunches that are served.</inlineHelpText>
        <label>State Reduced Lunch Reimbursement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Students_Eligible_for_Free_Reduced__c</fullName>
        <description>This is the percentage of students who are eligible to receive free or reduced meals.</description>
        <inlineHelpText>This is the percentage of students who are eligible to receive free or reduced meals.</inlineHelpText>
        <label>% Students Eligible for Free/Reduced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Students_Receiving_Free_Meals__c</fullName>
        <label># of Students Receiving Free Meals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Students_Receiving_Full_Price_Meals__c</fullName>
        <label># of Students Receiving Full-Price Meals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Students_Receiving_Reduced_Meals__c</fullName>
        <label># of Students Receiving Reduced Meals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Meals Setup</label>
    <nameField>
        <displayFormat>MS-{0}</displayFormat>
        <label>Meals Setup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meals Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>